# cmd/server/account/account_handler.go
@@ -1,6 +1,7 @@
 package account
 
 import (
+	"encoding/json"
 	"fmt"
 	"net/http"
 
@@ -20,31 +21,50 @@ func NewAccountHandler(db *persistence.SqlLayer) *AccountHandler {
 	}
 }
 
-// GetAccountInfo receive account information
+// GetAccountInfo godoc
+//
+//	@Summary		Get account information
+//	@Description	Get account information for a given user
+//	@Tags			account
+//	@Accept			json
+//	@Produce		json
+//	@Param			username	query		string				true	"Username"
+//	@Success		200			{object}	model.AccountInfo	"OK"
+//	@Failure		400			{object}	object{error=string}	"Bad Request"
+//	@Failure		404			{object}	object{error=string}	"Not Found"
+//	@Failure		500			{object}	object{error=string}	"Internal Server Error"
+//	@Router			/account/info [get]
 func (ah *AccountHandler) GetAccountInfo(w http.ResponseWriter, r *http.Request) {
 	logger.Debug("enter  GetAccountInfo method")
-	var err error
 
-	accountId := r.URL.Query().Get("accountId")
+	username := r.URL.Query().Get("username")
 
-	if accountId == "" {
-		w.WriteHeader(500)
-		_, _ = fmt.Fprint(w, `{"error": "accountId parameter is	not set"}`)
+	if username == "" {
+		w.Header().Set("Content-Type", "application/json;charset=utf8")
+		w.WriteHeader(http.StatusBadRequest)
+		_, _ = fmt.Fprint(w, `{"error": "username parameter is not set"}`)
 		return
 	}
 
-	//TODO: save current account status to the database
+	accountInfo, err := ah.DataBaseHandler.GetAccountInfo(username)
 
 	if nil != err {
-		w.WriteHeader(500)
+		// Assuming a not found error is common here.
+		w.Header().Set("Content-Type", "application/json;charset=utf8")
+		w.WriteHeader(http.StatusNotFound)
 		_, _ = fmt.Fprintf(w, `{"error": "error occurred while getting account info %s"}`, err)
 		return
 	}
-	w.Header().Set("Content-Type", "application/json;charset=utf8")
-	// //	err = json.NewEncoder(w).Encode(&accountInfo)
-	// 	if err != nil {
-	// 		w.WriteHeader(500)
-	// 		_, _ = fmt.Fprintf(w, `{"error": "Error occurred while trying encode events to JSON %s"}`, err)
-	// 	}
 
+	w.Header().Set("Content-Type", "application/json;charset=utf8")
+	w.WriteHeader(http.StatusOK)
+	err = json.NewEncoder(w).Encode(&accountInfo)
+	if err != nil {
+		w.WriteHeader(http.StatusNotFound)
+		logger.Errorf("Error occurred while trying to encode account info to JSON: %s", err)
+		// The header is already written, so we can't send another status code.
+		// We can log the error. The client might receive a partial response.
+		_, _ = fmt.Fprintf(w, `{"error": "Error occurred while trying encode events to JSON %s"}`, err)
+		return
+	}
 }
