# docs/swagger.yaml
@@ -1,4 +1,16 @@
 definitions:
+  model.AccountInfo:
+    properties:
+      email:
+        description: email is a username
+        type: string
+      last_name:
+        type: string
+      name:
+        type: string
+      username:
+        type: string
+    type: object
   model.Credentials:
     properties:
       passwd:
@@ -22,6 +34,48 @@ definitions:
 info:
   contact: {}
 paths:
+  /account/info:
+    get:
+      consumes:
+      - application/json
+      description: Get account information for a given user
+      parameters:
+      - description: Username
+        in: query
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.AccountInfo'
+        "400":
+          description: Bad Request
+          schema:
+            properties:
+              error:
+                type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            properties:
+              error:
+                type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            properties:
+              error:
+                type: string
+            type: object
+      summary: Get account information
+      tags:
+      - account
   /auth/login:
     post:
       consumes:
